--- a/tweet_classification_app/views/layout.ejs
+++ b/tweet_classification_app/views/layout.ejs
@@ -14,6 +14,7 @@
   <script src="/leaflet_markers/js/leaflet.extra-markers.js"></script>
   <script src="/leaflet_markers/js/leaflet.extra-markers.min.js"></script>
   <script src="/leaflet_cluster/dist/leaflet.markercluster.js"></script>
+  <script src="https://unpkg.com/leaflet-responsive-popup@0.3.0/leaflet.responsive.popup.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
   <!--End of your Script Tags -->
 
@@ -23,7 +24,8 @@
 
   <!-- Your Style Sheets -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css" />
-  <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-responsive-popup@0.3.0/leaflet.responsive.popup.css" />
   <link rel="stylesheet" href="/leaflet_cluster/dist/MarkerCluster.Default.css">
   <link rel="stylesheet" href="/leaflet_cluster/dist/MarkerCluster.css">
   <link rel="stylesheet" href="/leaflet_markers/css/leaflet.extra-markers.min.css">
